@@ -9,6 +9,12 @@ and this project adheres to `Semantic Versioning <http://semver.org/>`_
 UNRELEASED VERSION
 ------------------
 
+Added
+~~~~~
+
+- Options to create a session with re-using a JSESSION ID instead of logging in and a BaseXNATSession that does
+  not destroy the session on disconnect
+
 Changed
 ~~~~~~~
 
